# ServerAndClient

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.python  README.md  ServerAndClient.sln  client.vcxproj  common.vcxproj  imgui.vcxproj  relay.vcxproj  render.yaml  server.vcxproj
client/: main.cpp
common/: imgui_setup.cpp  imgui_setup.h  network.cpp  network.h  protection.h  protocol.h  wswin.cpp  wswin.h
relay/: main.cpp  relay.py
server/: main.cpp
